--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
