--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "redux-toolkit": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://leeyomyeon.github.io/sample-project/",
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.1.0"
   }
 }
