--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react-redux": "^8.1.3",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "redux-actions": "^3.0.0",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^3.1.0",
     "redux-toolkit": "^1.1.2",
@@ -30,7 +31,7 @@
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
