--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "redux-toolkit": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://leeyomyeon.github.io/sample-project/",
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
@@ -55,5 +54,6 @@
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.1.0"
-  }
+  },
+  "__homepage__": "https://leeyomyeon.github.io/sample-project/"
 }
